2015-06-11  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Update to include the LooseDyn model plots.
	Change to match file name change from ObsCompound to ObsDrug.

2015-06-08  gepr  <gepr@tempusdictum.com>

	* agg.r, cmp-by-model.r: Add option to print SVG and single plot per page.  Also change the way limits are computed, formatting, etc.

2015-06-01  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Add test for "conc" or "fract" in column names and use different y label depending.

2015-05-11  gepr  <gepr@tempusdictum.com>

	* agg.r: Script to aggregate (mean) data from several trials.

2015-05-07  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Fix usage.

2015-04-29  gepr  <gepr@tempusdictum.com>

	* cmp-by-col.r: List files by pattern containing "Loose" in experiment directories.
